# fhir_bundle_builder

./: README.md  pyproject.toml
config/agents/: agent_config.py  assembly_manager.yaml  coordinator.yaml  requirements.yaml  resource_builder.yaml  validator.yaml
docs/: INDEX.md  architecture-and-system-requirements.md  demo-scenarios.md  development-plan.md  microsoft-agent-framework-best-practices.md  operator-guidance.md  post-consolidation-checkpoint.md  psca-bundle-assembly-architecture.md  psca-bundle-assembly-platform-architecture-and-requirements.md  psca-workflow-development-guidance.md
docs/Plans/: PLAN001.md  PLAN002.md  PLAN003.md  PLAN004.md  PLAN005.md  (+47 more)
examples/: psca_medication_agent_demo_input.json
tests/: test_authored_bundle_orchestration.py  test_authored_record_refinement.py  test_matchbox_standards_validator.py  test_openai_gateway.py  test_patient_authoring_agent.py  test_patient_authoring_builder.py  test_patient_authoring_mapper.py  test_patient_authoring_web_app.py  test_provider_authoring_builder.py  test_provider_authoring_mapper.py  test_psca_asset_repository.py  test_psca_authored_bundle_demo_workflow.py  test_psca_build_plan_builder.py  test_psca_bundle_builder_workflow.py  test_psca_bundle_finalization_builder.py  test_psca_bundle_schematic_builder.py  test_psca_medication_agent_demo_workflow.py  test_psca_medication_request_agent.py  test_psca_repair_decision_builder.py  test_psca_repair_execution_builder.py  test_psca_request_normalization_builder.py  test_psca_resource_construction_builder.py  test_psca_validation_builder.py
(+171 files in other folders)
