[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fhir-bundle-builder"
version = "0.1.0"
description = "Workflow-first PS-CA FHIR bundle builder skeleton in Microsoft Agent Framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "agent-framework-core>=1.0.0rc4",
  "agent-framework-devui>=1.0.0b260311",
  "pydantic>=2.13.0b2",
  "typing_extensions>=4.15.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
